assets/scss/_mobile.scss
@media (max-width: 767px){
    h1 {
        font-size: 40px !important;
        line-height: 55px !important;
    }

    h2 {
        font-size: 35px !important;
        line-height: 45px !important;
    }

    .col-md-4 {
        width: 100% !important;
    }

    a.white-btn, .primary-btn {
        padding: 10px 20px;
        font-size: 16px;
        text-align: center;
    }

    .primary-btn.active, .primary-btn>a.active {
        text-align: left !important;
        filter: unset !important;
    }

    .btn-dropdown-wrapper .dropdown, .primary-btn .sub-menu {
        background-color: #d86e2600 !important;
        border: 0px !important;
        box-shadow: unset !important;
        position: static !important;
        margin-top: 10px !important;
    }
    .btn-dropdown-wrapper .dropdown li, .primary-btn .sub-menu li {
        text-align: left !important;

        a {
            font-weight: 400 !important;
            display: block !important;
            padding: 0px 10px !important;
        }
    }
    
    .global-header {
        .header-logo {
            img {
                max-width: 80px !important;
            }
        }
        .main-menu {
            display: none;
            position: absolute;
            top: 90px;
            width: 100%;
            left: 0;
            padding: 0px;
            height: calc(100vh - 91px);

            ul#menu-main-menu {
                display: block;
                padding: 30px 20px;
                background-color: white;
                height: 100%;

                li.menu-item {
                    margin-bottom: 10px;
                }

                li.menu-item a {
                    color: #000000 !important;
                }

                li.request-btn a, .primary-btn>a {
                    color: #000000 !important;
                    border-radius: 0px !important;
                    border: 0px !important;
                    padding: 0px !important;
                    background-color: #ffffff00 !important;
                    font-weight: 400 !important;
                }
                .primary-btn, a.white-btn {
                    padding: 0px !important;
                    text-align: left !important;
                }
            }
        }
        .hamburger.is-lg {
            display: block !important;
        }
        .hamburger.is-lg.is-active + .main-menu {
            display: block;
        }
    }

    section.banner {
        padding: 60px 0 !important;
        text-align: center;

        .row {
            flex-direction: column-reverse;

            .col-md-6 {
                width: 100%;
            }

            .content {
                padding-right: 0px !important;
                margin-top: 20px;
            }

            p {
                font-size: 16px;
            }
        }
    }

    section.solutions-sect {
        padding: 50px 0 0 0 !important;

        .row {
            .col-md-4.card {
                width: 100%;
                margin-bottom: 15px;
            }
        }
    }

    section.cta {
        padding: 50px 0 !important;

        .row {
            padding: 40px 10px !important;
            flex-direction: column-reverse;
            margin-top: 0px !important;

            .col-md-8 {
                padding-right: 0px !important;
                width: 100%;

                .row {
                    padding-bottom: 0px !important;
                }
            }

            .col-md-4 {
                width: 100%;
                margin-bottom: 20px;
            }

        }
    }

    section.simple-content {
        padding: 50px 0 50px 0 !important;
    }

    section.pricing-table {
        .table-main {
            .col-md-4 {
                width: 100% !important;
            }
        }
    }

    footer.global-footer {
        padding-top: 60px !important;

        .table-main {
            .row {
                padding-bottom: 50px !important;
            }   
        }
    }

    section.form-sect {
        padding: 50px 0 50px 0 !important;

        .form {
            padding: 30px 15px !important;

            &:after {
                display: none;
            }
            &:before {
                display: none;
            }

            iframe {
                padding: 10px;
                background-color: white;
            }
        }
        
        .col-md-6 {
            width: 100% !important;

            &.content {
                margin-bottom: 20px;
            }
        }
    }

    .woocommerce-dashboard {
        .woocommerce-MyAccount-content {
            margin-top: 20px;
        }
    }

}

